# godaddy-cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
docs/: abuse.md  aftermarket.md  agreements.md  ans.md  auctions.md  certificates.md  countries.md  domains.md  orders.md  parking.md  shoppers.md  subscriptions.md
include/godaddy/: api_client.hpp  client.hpp  config.hpp  errors.hpp  http.hpp  service_base.hpp  types.hpp
include/godaddy/services/: abuse_service.hpp  aftermarket_service.hpp  agreements_service.hpp  ans_service.hpp  auctions_service.hpp  certificates_service.hpp  countries_service.hpp  domains_service.hpp  orders_service.hpp  parking_service.hpp  shoppers_service.hpp  subscriptions_service.hpp
src/: api_client.cpp  client.cpp
src/runtime/: errors.cpp  http_transport.cpp  request.cpp  response.cpp
src/services/: abuse_service.cpp  aftermarket_service.cpp  agreements_service.cpp  ans_service.cpp  auctions_service.cpp  certificates_service.cpp  countries_service.cpp  domains_service.cpp  orders_service.cpp  parking_service.cpp  shoppers_service.cpp  subscriptions_service.cpp
tests/: test_error_mapping.cpp  test_generated_services.cpp  test_main.cpp  test_query_encoding.cpp
